--- a/README.Rmd
+++ b/README.Rmd
@@ -460,9 +460,9 @@ The third example is composed of a bundle of indicators that prospectively refle
 
 ### Pay-Off Matrix
 
-A pay-off matrix provides information about the influence of single indicators on the sensitivity of the results (see e.g. Aldea et al., 2014, Table 1; Ezquerro et al., 2019, Table 1; Knoke et al., 2020, Supporting Information Table S6). The matrix shows the performances of all indicators when only one indicator is considered in the land-cover optimization and therewith reveals to which degree the indicators are antagonistic. In contrast to Aldea et al. (2014), Ezquerro et al. (2019) and Knoke et al. (2020), we here calculate the relative degree of fulfillment of the indicators and not their absolute values. The relative degree of fulfillment can easily be taken from the optimLanduse object, so that no further calculation are required to obtain a pay-off matrix.
+A pay-off matrix provides information about the influence of single indicators on the sensitivity of the results (see e.g. Aldea et al., 2014, Table 1; Ezquerro et al., 2019, Table 1; Knoke et al., 2020, Supporting Information Table S6). The matrix shows the performances of all indicators when only one indicator is considered in the land-cover optimization and therewith reveals to which degree the indicators are antagonistic. In contrast to Aldea et al. (2014), Ezquerro et al. (2019) and, Knoke et al. (2020), we here calculate the relative degree of fulfillment of the indicators and not their absolute values. The relative degree of fulfillment can easily be taken from the optimLanduse object, so that no further calculation are required to obtain a pay-off matrix.
 
-In the following code, a pay-off matrix is calculated using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized with respect to the one indicatior definied in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. Aim of the second optimization is to calculate the performances of all indicators when optimized only with respect to indicator *x* only. From the set of the so calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized with regard to one indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
+The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized for the one indicator defined in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. The second optimization aims to calculate the performances of all indicators when optimized for the indicator *x* only. From the set of the calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized for one indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 
@@ -529,9 +529,9 @@ knitr::kable(payOff_Matrix, row.names = F)
 
 *Table 3: Performances of all indicators when optimized for single indicators only (pay-off matrix). The indicators considered for optimization are located on the main diagonal. The other entries in the rows contain the performances of the respective not-optimized indicators.*
 
-It can be followed from the pay-off matrix (Table 3), that e.g. the general preferences are fully fulfilled when optimized considering the financial stability only (row 1) and vice-versa (row 2). Also the long-term income and the liquidity are fulfilled to high degrees. In contrast to that, the requirements of the farmers regarding investment costs are fulfilled poorly (0.074).
+It can be followed from the pay-off matrix (Table 3), that e.g., the general preferences are fully fulfilled when optimized considering the financial stability only (row 1) and vice-versa (row 2). Also, the long-term income and the liquidity are fulfilled to high degrees. In contrast, farmers' requirements regarding investment costs are fulfilled poorly (0.074).
 
-When optimized with respect to the water supply protection only (row 10), the indicators most relevant for the farmers (meeting household needs and Liquidity, Fig. 9) perform very poorly (0.0). So that the from societal perspective desirable water supply function is clearly antagonistic to the farmer's requirements.
+When optimized for the water supply protection only (row 10), the indicators most relevant for the farmers (meeting household needs and Liquidity, Fig. 9) perform very poorly (0.0). This shows that from a societal perspective, the desirable water supply function is clearly antagonistic to the farmer's requirements.
 
 ### The use of fixDistance
 
