--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <li><a href="#1. Einleitung">1. Introduction</a></li>
 
+[Intro2BlkaBla](#intro)
+
 <li><a href="#3. Input und Output">2. Detailed Description of the Functions' In- and Outputs</a></li>
 
 <li><a href="#5. Beispielhafte Anwendung">3. Example Application</a></li>
@@ -31,9 +33,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <li><a href="#8. Literatur">6. Literature</a></li>
 
+[Literature 2 asdf](#lit)
+
 </ul>
 
 <h3><a name="1. Einleitung">1. Introduction</a></h3>
+
+# Introduction 2 {#Intro}
 
 When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
@@ -581,6 +587,8 @@ It can be seen that the land-cover allocation transition under increasing uncert
 Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.1.0. <https://CRAN.R-project.org/package=optimLanduse>.
 
 <h3><a name="8. Literatur">6. Literature</a></h3>
+
+# Literature 2 {#lit}
 
 Gosling, E., Reith, E., Knoke T., Paul, C. (2020). A goal programming approach to evaluate agroforestry systems in Eastern Panama. <em>Journal of Environmental Management</em>, 261:110248. <https://doi.org/10.1016/j.jenvman.2020.110248>
 
