--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <li><a href="#1. Einleitung">1. Introduction</a></li>
 
-[Intro2BlkaBla](#intro)
+[Introduction 2]
 
 <li><a href="#3. Input und Output">2. Detailed Description of the Functions' In- and Outputs</a></li>
 
@@ -33,13 +33,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <li><a href="#8. Literatur">6. Literature</a></li>
 
-[Literature 2 asdf](#lit)
+[Literature 2]
 
 </ul>
 
 <h3><a name="1. Einleitung">1. Introduction</a></h3>
 
-# Introduction 2 {#Intro}
+# Introduction 2
 
 When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
@@ -588,7 +588,7 @@ Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robus
 
 <h3><a name="8. Literatur">6. Literature</a></h3>
 
-# Literature 2 {#lit}
+# Literature 2
 
 Gosling, E., Reith, E., Knoke T., Paul, C. (2020). A goal programming approach to evaluate agroforestry systems in Eastern Panama. <em>Journal of Environmental Management</em>, 261:110248. <https://doi.org/10.1016/j.jenvman.2020.110248>
 
